clients/flutter/lib/src/native/generated/anytty_client_bindings.dart

// Generated by ffigen. Do not edit.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated bindings for the AnyTTY Go Client Engine stable C ABI.
class AnyttyClientNative {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AnyttyClientNative(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AnyttyClientNative.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int anytty_client_abi_version() {
    return _anytty_client_abi_version();
  }

  late final _anytty_client_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'anytty_client_abi_version',
      );
  late final _anytty_client_abi_version = _anytty_client_abi_versionPtr
      .asFunction<int Function()>();

  anytty_status_v1 anytty_engine_create(
    ffi.Pointer<anytty_handle_t> out_engine_handle,
  ) {
    return anytty_status_v1.fromValue(_anytty_engine_create(out_engine_handle));
  }

  late final _anytty_engine_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<anytty_handle_t>)
        >
      >('anytty_engine_create');
  late final _anytty_engine_create = _anytty_engine_createPtr
      .asFunction<int Function(ffi.Pointer<anytty_handle_t>)>();

  anytty_status_v1 anytty_bridge_start(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<ffi.Uint8> token,
    int token_length,
    ffi.Pointer<ffi.Uint16> out_port,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_bridge_start(engine_handle, token, token_length, out_port),
    );
  }

  late final _anytty_bridge_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint16>,
          )
        >
      >('anytty_bridge_start');
  late final _anytty_bridge_start = _anytty_bridge_startPtr
      .asFunction<
        int Function(int, ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint16>)
      >();

  anytty_status_v1 anytty_local_probe(
    ffi.Pointer<ffi.Uint8> local_discovery_proto,
    int local_discovery_length,
    ffi.Pointer<ffi.Uint8> out_reachable,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_local_probe(
        local_discovery_proto,
        local_discovery_length,
        out_reachable,
      ),
    );
  }

  late final _anytty_local_probePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('anytty_local_probe');
  late final _anytty_local_probe = _anytty_local_probePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>)
      >();

  anytty_status_v1 anytty_direct_probe(
    ffi.Pointer<ffi.Uint8> direct_route_proto,
    int direct_route_length,
    ffi.Pointer<ffi.Uint8> out_reachable,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_direct_probe(
        direct_route_proto,
        direct_route_length,
        out_reachable,
      ),
    );
  }

  late final _anytty_direct_probePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('anytty_direct_probe');
  late final _anytty_direct_probe = _anytty_direct_probePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>)
      >();

  anytty_status_v1 anytty_supervisor_replace_demand(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<ffi.Uint8> demand_proto,
    int demand_length,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_supervisor_replace_demand(
        engine_handle,
        demand_proto,
        demand_length,
      ),
    );
  }

  late final _anytty_supervisor_replace_demandPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('anytty_supervisor_replace_demand');
  late final _anytty_supervisor_replace_demand =
      _anytty_supervisor_replace_demandPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  anytty_status_v1 anytty_supervisor_signal(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<ffi.Uint8> signal_proto,
    int signal_length,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_supervisor_signal(engine_handle, signal_proto, signal_length),
    );
  }

  late final _anytty_supervisor_signalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('anytty_supervisor_signal');
  late final _anytty_supervisor_signal = _anytty_supervisor_signalPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  anytty_status_v1 anytty_supervisor_wait_ready(
    Dartanytty_handle_t engine_handle,
    int timeout_millis,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_supervisor_wait_ready(engine_handle, timeout_millis),
    );
  }

  late final _anytty_supervisor_wait_readyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(anytty_handle_t, ffi.Uint32)
        >
      >('anytty_supervisor_wait_ready');
  late final _anytty_supervisor_wait_ready = _anytty_supervisor_wait_readyPtr
      .asFunction<int Function(int, int)>();

  anytty_status_v1 anytty_supervisor_snapshot(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<anytty_buffer_v1> out_snapshot_proto,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_supervisor_snapshot(engine_handle, out_snapshot_proto),
    );
  }

  late final _anytty_supervisor_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<anytty_buffer_v1>,
          )
        >
      >('anytty_supervisor_snapshot');
  late final _anytty_supervisor_snapshot = _anytty_supervisor_snapshotPtr
      .asFunction<int Function(int, ffi.Pointer<anytty_buffer_v1>)>();

  anytty_status_v1 anytty_engine_open_session(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<ffi.Uint8> request_proto,
    int request_length,
    ffi.Pointer<anytty_handle_t> out_operation_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_open_session(
        engine_handle,
        request_proto,
        request_length,
        out_operation_handle,
      ),
    );
  }

  late final _anytty_engine_open_sessionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<anytty_handle_t>,
          )
        >
      >('anytty_engine_open_session');
  late final _anytty_engine_open_session = _anytty_engine_open_sessionPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<anytty_handle_t>,
        )
      >();

  anytty_status_v1 anytty_engine_execute(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t session_handle,
    ffi.Pointer<ffi.Uint8> command_proto,
    int command_length,
    ffi.Pointer<anytty_handle_t> out_operation_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_execute(
        engine_handle,
        session_handle,
        command_proto,
        command_length,
        out_operation_handle,
      ),
    );
  }

  late final _anytty_engine_executePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<anytty_handle_t>,
          )
        >
      >('anytty_engine_execute');
  late final _anytty_engine_execute = _anytty_engine_executePtr
      .asFunction<
        int Function(
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<anytty_handle_t>,
        )
      >();

  anytty_status_v1 anytty_engine_open_resource_stream(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t session_handle,
    ffi.Pointer<ffi.Uint8> request_proto,
    int request_length,
    ffi.Pointer<anytty_handle_t> out_stream_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_open_resource_stream(
        engine_handle,
        session_handle,
        request_proto,
        request_length,
        out_stream_handle,
      ),
    );
  }

  late final _anytty_engine_open_resource_streamPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<anytty_handle_t>,
          )
        >
      >('anytty_engine_open_resource_stream');
  late final _anytty_engine_open_resource_stream =
      _anytty_engine_open_resource_streamPtr
          .asFunction<
            int Function(
              int,
              int,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<anytty_handle_t>,
            )
          >();

  anytty_status_v1 anytty_engine_send_resource_stream_frame(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t stream_handle,
    ffi.Pointer<ffi.Uint8> frame_proto,
    int frame_length,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_send_resource_stream_frame(
        engine_handle,
        stream_handle,
        frame_proto,
        frame_length,
      ),
    );
  }

  late final _anytty_engine_send_resource_stream_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('anytty_engine_send_resource_stream_frame');
  late final _anytty_engine_send_resource_stream_frame =
      _anytty_engine_send_resource_stream_framePtr
          .asFunction<int Function(int, int, ffi.Pointer<ffi.Uint8>, int)>();

  anytty_status_v1 anytty_engine_close_resource_stream(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t stream_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_close_resource_stream(engine_handle, stream_handle),
    );
  }

  late final _anytty_engine_close_resource_streamPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(anytty_handle_t, anytty_handle_t)
        >
      >('anytty_engine_close_resource_stream');
  late final _anytty_engine_close_resource_stream =
      _anytty_engine_close_resource_streamPtr
          .asFunction<int Function(int, int)>();

  anytty_status_v1 anytty_engine_command(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<ffi.Uint8> command_proto,
    int command_length,
    ffi.Pointer<anytty_handle_t> out_operation_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_command(
        engine_handle,
        command_proto,
        command_length,
        out_operation_handle,
      ),
    );
  }
